[package]
name = "axum-rs"
version = "2.0.1"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/axum-rs"
homepage = "https://axum.rs"
description = "axum.rs网站系统"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
pulldown-cmark = "0.12"
bcrypt = "0.15"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
xid = "1"
sha2 = "0.10"
base16ct = "0.2"
lazy_static = "1"
regex = "1"
rand = "0.8"
anyhow = "1"
