[package]
name = "axum-rs"
version = "2.1.3"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/axum-rs"
homepage = "https://axum.rs"
description = "axum.rs网站系统"

[workspace]
members = [".", "axum-rs-derive"]

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
chrono.workspace = true
sqlx.workspace = true
pulldown-cmark.workspace = true
bcrypt.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
serde_json.workspace = true
validator.workspace = true
tower-http.workspace = true
xid.workspace = true
sha2.workspace = true
base16ct.workspace = true
lazy_static.workspace = true
regex.workspace = true
rand.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
scraper.workspace = true
lettre.workspace = true
bitflags.workspace = true
utf8_slice.workspace = true
rss.workspace = true
axum-rs-derive = { path = "./axum-rs-derive" }


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "rust_decimal",
] }
pulldown-cmark = "0.12"
bcrypt = "0.16"
config = { version = "0.14", features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
validator = { version = "0.19", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
xid = "1"
sha2 = "0.10"
base16ct = "0.2"
lazy_static = "1"
regex = "1"
rand = "0.8"
anyhow = "1"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
scraper = "0.21"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
bitflags = "2.6"
utf8_slice = "1"
rss = "2"
